Closed
Bug 1681756
Opened 4 years ago
Closed 4 years ago
Crash in [@ mozilla::wr::DCSurface::GetTile]
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
RESOLVED
FIXED
86 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox84 | --- | unaffected |
firefox85 | --- | unaffected |
firefox86 | --- | fixed |
People
(Reporter: sefeng, Assigned: sotaro)
References
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
Crash report: https://crash-stats.mozilla.org/report/index/36f2e46e-3d27-467b-8095-9201a0201209
MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(tile_it != mDCTiles.end())
Top 10 frames of crashing thread:
0 xul.dll mozilla::wr::DCSurface::GetTile const gfx/webrender_bindings/DCLayerTree.cpp:651
1 xul.dll mozilla::wr::DCLayerTree::Bind gfx/webrender_bindings/DCLayerTree.cpp:312
2 xul.dll mozilla::wr::RenderCompositorANGLE::Bind gfx/webrender_bindings/RenderCompositorANGLE.cpp:856
3 xul.dll mozilla::wr::wr_compositor_bind gfx/webrender_bindings/RenderCompositor.cpp:52
4 xul.dll webrender_bindings::bindings::{{impl}}::bind gfx/webrender_bindings/src/bindings.rs:1311
5 xul.dll webrender::renderer::Renderer::render_impl gfx/wr/webrender/src/renderer.rs:3523
6 xul.dll webrender::renderer::Renderer::render gfx/wr/webrender/src/renderer.rs:3244
7 xul.dll webrender_bindings::bindings::wr_renderer_render gfx/webrender_bindings/src/bindings.rs:614
8 xul.dll mozilla::wr::RendererOGL::UpdateAndRender gfx/webrender_bindings/RendererOGL.cpp:193
9 xul.dll mozilla::wr::RenderThread::UpdateAndRender gfx/webrender_bindings/RenderThread.cpp:488
Updated•4 years ago
|
Blocks: gfx-triage
Assignee | ||
Comment 1•4 years ago
|
||
All crashes had the following GraphicsCriticalError message.
Failed to initialize DCTile: 00
Assignee | ||
Comment 2•4 years ago
|
||
It could happen only when tile size is not correct.
Assignee | ||
Comment 3•4 years ago
|
||
Tile size is set in DCLayerTree::CreateSurface()
Assignee | ||
Updated•4 years ago
|
Assignee: nobody → sotaro.ikeda.g
Assignee | ||
Comment 4•4 years ago
|
||
Updated GraphicsCriticalError of crash repors had the following. Then DEBUG_OVERLAY seemed to cause the problem.
TileSize is not positive aId: 18446744073709551615 aTileSize(0,0)
Assignee | ||
Comment 5•4 years ago
|
||
aTileSize(0,0) seemed to happen when RenderCompositorANGLE::GetBufferSize() returned (0, 0).
Assignee | ||
Comment 6•4 years ago
|
||
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a0f41db4ddb5
Make RenderCompositorANGLE::GetBufferSize() to be positive with native compositor r=mattwoodrow
Comment 8•4 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox86:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 86 Branch
Assignee | ||
Updated•4 years ago
|
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Updated•4 years ago
|
Assignee | ||
Comment 10•4 years ago
|
||
Comment 11•4 years ago
|
||
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6f144aa78811
Fix return of RenderCompositorANGLE::GetBufferSize() r=nical
Comment 12•4 years ago
|
||
bugherder |
Status: REOPENED → RESOLVED
Closed: 4 years ago → 4 years ago
Resolution: --- → FIXED
Updated•4 years ago
|
status-firefox84:
--- → unaffected
status-firefox85:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•4 years ago
|
No longer blocks: gfx-triage
You need to log in
before you can comment on or make changes to this bug.
Description
•