Bug 1681756 - Make RenderCompositorANGLE::GetBufferSize() to be positive with native compositor r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D100220