gfx/webrender_bindings/RenderCompositorANGLE.cpp
@@ -730,6 +730,10 @@ LayoutDeviceIntSize RenderCompositorANGLE::GetBufferSize() {
     }
     return mBufferSize.ref();
   } else {
+    auto size = mWidget->GetClientSize();
+    // This size is used for WR DEBUG_OVERLAY. Its DCTile does not like 0.
+    size.width = std::max(size.width, 1);
+    size.height = std::max(size.height, 1);
     return mWidget->GetClientSize();
   }
 }
